force-app/main/default/objects/ffr__XXXAllTypes__c/ffr__XXXAllTypes__c.object-meta.xml
<CustomObject>
    <description>For internal use only.</description>
    <label>XXX All Types</label>
    <nameField>
        <label>XXX All Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XXX All Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>