force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>ffr__AutoNumber__c</fullName>
    <displayFormat>N-{00000}</displayFormat>
    <label>AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>