force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__BudgetValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__BudgetValue__c</fullName>
    <label>BudgetValue</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>