force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>ffr__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>