force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__EncryptedText__c.field-meta.xml
<CustomField>
    <fullName>ffr__EncryptedText__c</fullName>
    <label>EncryptedText</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>