force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>ffr__GeoLocation__c</fullName>
    <label>GeoLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>