force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__Period__c.field-meta.xml
<CustomField>
    <fullName>ffr__Period__c</fullName>
    <label>Period</label>
    <length>8</length>
    <type>Text</type>
</CustomField>