force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__PicklistMulti__c.field-meta.xml
<CustomField>
    <fullName>ffr__PicklistMulti__c</fullName>
    <label>PicklistMulti</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>American</fullName>
                <default>true</default>
                <label>American</label>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Irish</fullName>
            </value>
            <value>
                <fullName>Pakistani</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>