force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__RestrictedPicklist__c.field-meta.xml
<CustomField>
    <fullName>ffr__RestrictedPicklist__c</fullName>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>