force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__SFCurrency__c.field-meta.xml
<CustomField>
    <fullName>ffr__SFCurrency__c</fullName>
    <description>Salesforce Currency</description>
    <inlineHelpText>Salesforce Currency</inlineHelpText>
    <label>SFCurrency</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>