force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__URL__c.field-meta.xml
<CustomField>
    <fullName>ffr__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>