force-app/main/default/objects/ffr__XXXAllTypes__c/fields/ffr__XXXPeriod__c.field-meta.xml
<CustomField>
    <fullName>ffr__XXXPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XXX Period</label>
    <referenceTo>ffr__XXXPeriod__c</referenceTo>
    <relationshipLabel>XXX All Types</relationshipLabel>
    <relationshipName>XXXAllTypes</relationshipName>
    <type>Lookup</type>
</CustomField>